_sass/no-style-please.scss
// -------------- THEME SWITCHER -------------- //
@mixin dark-appearance {
    filter: invert(1);
    img {
      filter: invert(1);
  
      &.ioda { filter: invert(0); }
    }
  }
  
  body[a="dark"] { @include dark-appearance; }
  
  
  @media (prefers-color-scheme: dark) {
    body[a="auto"] { @include dark-appearance; }
  }
  // -------------------------------------------- //
  
  // bg color is also needed in html in order to
  // block body's background propagation
  // see: https://stackoverflow.com/a/61265706
  html, body { background: white; }
  
  html { height: 100%; }
  
  body {
    color: black;
    font-family: Arial, 'Ubuntu', serif;    // font-family: Tahoma, Lucida Console, Verdana, sans-serif, monospace;
    // font-size: 16px;
    // line-height: 1.4;
    font-size: 18px;
    line-height: 1.55;
    margin: 0;
    min-height: 100%;
    overflow-wrap: break-word;
  }
  
  .post-meta { text-align: right; }
  
  h1 {font-size: 30px; margin-top: 1rem; }
  
  // h2, h3, h4, h5, h6 { margin-top: 2rem; }
  
  h2, h3, h4, h5, h6 { margin-top: 2rem; }
  
  hr { margin: 2rem 0; }
  
  p { margin: 1rem 0; }
  
  a {color: black;
     font-weight: bold; }
     
  // a:hover {color: #5A5A5A; }
  a:hover {color: #FF033E; }
  
  // a {color: #a50000; }
    
  li { margin: 0.4rem 0; }
  
  *:target { background: yellow; }
  
  .w {
    max-width: 640px;
    margin: 0 auto;
    padding: 4rem 2rem;
  }
  
  hr {
    text-align: center;
    border: 0;
  
    &:before { content: '/////' }
    &:after { content: attr(data-content) '/////' }
  }
  
  table { width: 100%; }
  
  table, th, td {
    border: thin solid black;
    border-collapse: collapse;
    padding: 0.4rem;
  }
  
  code {
    color: white;
    background: black;
  }
  
  div.highlighter-rouge code {
    display: block;
    overflow-x: auto;
    white-space: pre-wrap;
    padding: 1rem;
  }
  
  blockquote {
    font-style: italic;
    border: thin solid black;
    padding: 1rem;
  
    p { margin: 0; }
  }
  
  img {
    max-width: 100%;
    display: block;
    margin: 0 auto;
  }
  
  #main-navigation {
    word-spacing: 0.15em;
    padding-bottom: 0.55em;  
  }
  
  // -------------------------------------------- //
  // navigation
  
  #main-navigation a {
    color: black;
    //text-decoration: none;
    font-weight: strong;
    //background-color: #D6BBB645; // pink
    line-height: 24px;
    // padding: 2px 4px 0 4px;
    padding: 2px 0px 0 2px;
    // box-shadow: 2px 0 0 #D6BBB670;
  }
  
  #main-navigation a:hover {color: #FF033E; }
  
  
  // -------------------------------------------- //
  // links
    
  
  #contact-link a {
    //line-height: 24px;
    font-weight: normal;
    float: left;
    margin-right: 10px;
    vertical-align: baseline;
    text-decoration: none;
  }
  
  #contact-link img{
    height: 25px;
    width: 25px;
  }

// #contact-link img:hover{color: #FF033E; }

 #contact-link a:hover{color: black; }

